namespace ConsoleApp.Problems.LoggingFramework
{
    public enum LogType
    {
        INFO,
        WARN,
        ERROR
    }
}