---
id: 2bffd036-d6cb-41c0-9228-d3bddb8b386c
title: Logging Framework
---
classDiagram
  class Logger {
    - instance : Logger
    - Log(LogType logType, string message)
    + GetInstance() Logger
    + LogInfo(string message) void
    + LogWarning(string message) void
    + LogError(string message) void
    + LogDebug(string message) void
  }

  class LogMessage {
    - message : string
    - level : LogLevel
    - timestamp : DateTime
  }

  class LogHandler {
    - appenders : List~LogAppender~
    + AddAppender(Appender appender) void
    + RemoveAppender(Appender appender) void
    + Next() void
    + NotifyAppenders(LogMessage logMessage) void
  }

  class InfoLogHandler
  class DebugLogHandler
  class WarningLogHandler
  class ErrorLogHandler

  class LogAppender {
    - formatter : LogFormatter
    + SetFormatter(LogFormatter) void
    + GetFormatter() LogFormatter
    + Append(LogMessge)
  }

  class LogFormatter {
    <<interface>>
    + Format(LogMessage logMessage) string
  }

  class PlainTextFormatter {
    + Format(LogMessage logMessage) string
  }

  class JsonLogFormatter {
    + Format(LogMessage logMessage) string
  }

  Logger <|-- LogMessage
  Logger <|-- LogHandler
  LogHandler <|-- InfoLogHandler
  LogHandler <|-- ErrorLogHandler
  LogHandler <|-- WarningLogHandler
  LogHandler <|-- DebugLogHandler
  LogFormatter <|-- PlainTextFormatter
  LogFormatter <|-- JsonLogFormatter
  LogAppender <|-- LogFormatter
  LogHandler <|-- LogAppender

  class LogType {
    <<enumeration>>
    INFO
    WARN
    ERROR
    DEBUG
  }